# 27z-6_role_evaluator

./: .gitignore  CODE_QUALITY_IMPROVEMENTS.md  COMMON_COMMANDS.md  CONTRIBUTING.md  GETTING_STARTED.md  HOW_TO_USE_THIS_TOOL.md  INSTALL.md  LICENSE.txt  QUICK_START.md  README.md  SETUP_SUMMARY.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  USER_GUIDES_SUMMARY.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
app/public/: facilities_BACKUP_2026-01-08.geojson  index.html  index.html.broken
data/exports/: facilities.geojson  facility_rollup.csv  facility_rollup_all_facilities.csv  impacts_by_facility.csv  job_title_rollup.csv  job_titles.csv  notice_summary.csv  top_facilities.csv  top_job_titles.csv  top_job_titles_all.csv
data/extracted/: layoff2_pages.json
data/normalized/: combined.json  facility_addresses_staging_2026-01-08.csv  facility_geocodes.csv  facility_geocodes.json  facility_geocodes_CLEAN.csv  facility_geocodes_PRE_PROMOTE_2026-01-08.csv  facility_geocodes_PRE_REFRESH_2026-01-08.csv  facility_geocodes_REFRESH_CANDIDATE.csv  geocode_merge_report.csv  geocode_refresh_changes.csv  geocode_refresh_unresolved.csv  job_title_aliases.json  notice_1.json  notice_2.json
docs/: DATA_SCHEMA.md  DECISIONS.md  README.md  SCORING.md  SPEC.md  UI_WIREFRAME.md
scripts/: README.md  build_map_data.bat  cleanup_git_tag.ps1  risk.ps1  run_map.bat  run_map.ps1
tools/: build_combined.py  check_geocodes.py  export_facilities_geojson.py  export_facility_rollup_all_facilities.py  export_impacts_by_facility.py  export_job_title_rollup.py  export_job_title_rollup_from_impacts.py  export_job_titles.py  export_notice_summary_from_impacts.py  export_top_facilities.py  export_top_job_titles.py  extract_pages.py  geocode_refresh_from_addresses.py  merge_addresses_into_geocodes.py  parse_layoff2.py  risk_assessment.py  validate_notice.py
