# pyproject.toml - Modern Python project configuration
# =====================================================
# This file configures build tools, linters, and formatters.

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "27z-6-role-evaluator"
version = "1.0.0"
description = "Layoff notice aggregation, risk assessment, and visualization tool"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}  # TODO: Update
]
keywords = ["layoff", "warn-notice", "risk-assessment", "data-pipeline"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pdfplumber>=0.10.0,<0.11.0",
    "geopy>=2.4.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "black>=23.0.0,<24.0.0",
    "flake8>=6.1.0,<7.0.0",
    "mypy>=1.7.0,<2.0.0",
    "isort>=5.12.0,<6.0.0",
    "pre-commit>=3.5.0,<4.0.0",
]

[project.scripts]
risk-assessment = "tools.risk_assessment:main"

[project.urls]
Homepage = "https://github.com/chromaglow/27z-6_role_evaluator"
Repository = "https://github.com/chromaglow/27z-6_role_evaluator"
Issues = "https://github.com/chromaglow/27z-6_role_evaluator/issues"

# Black configuration
[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | data
)/
'''

# isort configuration (import sorting)
[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["tools"]

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=tools",
    "--cov-report=term-missing",
    "--cov-report=html",
]

# mypy configuration (type checking)
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true when you add type hints everywhere
ignore_missing_imports = true

# Coverage configuration
[tool.coverage.run]
source = ["tools"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
